--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Angular Impress.js</title>
 
     <link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
     <base href="/">
   </head>
   
@@ -107,8 +107,8 @@
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular.js"></script>
     <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.8/angular-sanitize.js"></script>
     <script type="text/javascript" src="//rawgit.com/btford/angular-markdown-directive/master/markdown.js"></script>
-    <script type="text/javascript" src="/js/external/impress.js"></script>
+    <script type="text/javascript" src="js/external/impress.js"></script>
     
-    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
   </body>
 </html>
