Add link to intro from header

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="jumbotron">
         <div class="container">
           <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-2 clickable" ng-click="setView('pages/intro.smd')">
               <h2>Długo- i krótkoterminowe kierunki rozwoju</h2>
               <span>Definicja problemów, określenie celów, ogólny zarys dojścia</span>
             </div>
